--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - uses: microsoft/playwright-github-action
+    - uses: microsoft/playwright-github-action@latest
     - run: npm test
